--- a/SOS/SOS.vcxproj
+++ b/SOS/SOS.vcxproj
@@ -24,7 +24,7 @@
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>BakkesTest</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
-    <ProjectName>BakkesWebApi</ProjectName>
+    <ProjectName>SOS</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -121,7 +121,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;BAKKESTEST_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>E:\sdk\Simplejson;E:\sdk\asio\include;E:\sdk\websocketpp-0.8.1;C:\Program Files %28x86%29\Steam\steamapps\common\rocketleague\Binaries\Win32\bakkesmod\bakkesmodsdk\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\SimpleAOB\SOS\adtl-includes\SimpleJSON;C:\Users\SimpleAOB\SOS\adtl-includes\asio-1.12.2\include;C:\Users\SimpleAOB\SOS\adtl-includes\websocketpp-0.8.1;$(BAKKESMODSDK)\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp14</LanguageStandard>
     </ClCompile>
     <Link>
@@ -129,7 +129,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Program Files %28x86%29\Steam\steamapps\common\rocketleague\Binaries\Win32\bakkesmod\bakkesmodsdk\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(BAKKESMODSDK)\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -153,11 +153,11 @@
   <ItemGroup>
     <ClInclude Include="ApiPlayer.h" />
     <ClInclude Include="ApiTeam.h" />
-    <ClInclude Include="BakkesWebApi.h" />
+    <ClInclude Include="SOS.h" />
     <ClInclude Include="ApiGame.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="BakkesWebApi.cpp" />
+    <ClCompile Include="SOS.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\goals.html" />
