--- a/SOS/SOS.vcxproj
+++ b/SOS/SOS.vcxproj
@@ -121,7 +121,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;BAKKESTEST_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\SimpleAOB\SOS\adtl-includes\SimpleJSON;C:\Users\SimpleAOB\SOS\adtl-includes\asio-1.12.2\include;C:\Users\SimpleAOB\SOS\adtl-includes\websocketpp-0.8.1;$(BAKKESMODSDK)\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\sos-plugin-includes\SimpleJSON;$(SolutionDir)\sos-plugin-includes\asio-1.12.2\include;$(SolutionDir)\sos-plugin-includes\websocketpp-0.8.1;$(BAKKESMODSDK)\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp14</LanguageStandard>
     </ClCompile>
     <Link>
@@ -162,6 +162,7 @@
   <ItemGroup>
     <None Include="..\goals.html" />
     <None Include="..\README.md" />
+    <None Include="..\sos.set" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
