Update for 1.1.0 tagging
- Remove Best Of clamping
- Add pre/post countdown. Needed for edge cases of match starting checks
- Fix null teams at countdown init
- Additional Best Of fixes

--- a/SOS/SOS.vcxproj
+++ b/SOS/SOS.vcxproj
@@ -162,6 +162,7 @@
   <ItemGroup>
     <None Include="..\goals.html" />
     <None Include="..\README.md" />
+    <None Include="..\Release\SOS.dll" />
     <None Include="..\sos.set" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
