Removed SOS specific commands, handle these in overlay/control boards
Added a set of hooks to determine replay begin, goal, and end. Useful for stinger transitions
Added try catch for sending websocket payloads. Should reduce crashing

--- a/SOS/SOS.vcxproj
+++ b/SOS/SOS.vcxproj
@@ -131,6 +131,9 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>$(BAKKESMODSDK)\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
+    <PostBuildEvent>
+      <Command>xcopy "$(TargetPath)" "J:\SteamLibrary\steamapps\common\rocketleague\Binaries\Win32\bakkesmod\plugins\" /Y</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
