Added nameplate information and created a new build config to either include or ignore nameplate code

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = sos-plugin-includes
 	url = https://gitlab.com/bakkesplugins/sos/sos-plugin-includes.git
 	branch = master
+[submodule "RenderingTools"]
+	path = RenderingTools
+	url = https://github.com/CinderBlocc/RenderingTools.git
+	branch = master
