Reorganized code into files and made some cleanup changes

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,8 @@
-[submodule "sos-plugin-includes"]
-	path = sos-plugin-includes
-	url = https://gitlab.com/bakkesplugins/sos/sos-plugin-includes.git
-	branch = master
 [submodule "RenderingTools"]
 	path = RenderingTools
 	url = https://github.com/CinderBlocc/RenderingTools.git
+	branch = master
+[submodule "sos-plugin-includes"]
+	path = sos-plugin-includes
+	url = git@gitlab.com:bakkesplugins/sos/sos-plugin-includes.git
 	branch = master
