Added quotation marks around post build command in case there are spaces in the path

--- a/SOS/BakkesMod.props
+++ b/SOS/BakkesMod.props
@@ -6,7 +6,7 @@
   </PropertyGroup>
   <ItemDefinitionGroup>
     <PostBuildEvent>
-      <Command>$(BakkesModPath)\bakkesmodsdk\bakkesmod-patch.exe "$(TargetPath)"</Command>
+      <Command>"$(BakkesModPath)\bakkesmodsdk\bakkesmod-patch.exe" "$(TargetPath)"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup />
